# codecrafters-kafka-rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs  request.rs  response.rs  size.rs
src/snapshots/: codecrafters_kafka__request__snapshot_valid_api_versions_request.snap  codecrafters_kafka__request__snapshot_valid_api_versions_request.snap.new
