[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
bytes = "1.3.0"                                  # helps manage buffers
deku = "0.18.1"
thiserror = "1.0.38"                             # error handling
